@@ -1,3 +1,9 @@
+2007-11-30  David Wetzel <dave@turbocat.de>
+        GSWeb.framework:
+        * GSWBindingNameAssociation.m
+        * GSWAssociation.m
+        add _setValueNoValidation:inComponent:
+
 2007-11-25  David Wetzel <dave@turbocat.de>
 	* GSWAdaptors/Apache2/mod_gsw.c
 	Works also if a header or empty line at the end of the headers has a \r\n ending.
